# cloud_sense

./: CMakeLists.txt  image_subscriber.cpp  package.xml  rgbd_handler.h
demos/: README.md
demos/Keyframe/: CMakeLists.txt  cloud.cpp  edge.cpp
demos/slite/: main.cpp  readme.md
include/cloud_sense/: RGBDHandler.h
include/image_subscriber/: RGBDHandler.h  httplib.h  sensor_data_serialization.h
launch/: imgsub.launch
loop_closure_demo/: loop_closure.cpp
msg/: KeyFrameRGB.msg
src/: cloud.cpp  image_subscriber.cpp  pgo.cpp
